# OCAMLLinearRegression

./: README.md
ocaml_lin_reg/: dune-project  ocaml_lin_reg.opam
ocaml_lin_reg/_build/: .db  .digest-db  log
ocaml_lin_reg/_build/default/: ocaml_lin_reg.dune-package  ocaml_lin_reg.install
ocaml_lin_reg/_build/default/lib/: ocaml_lin_reg.cma  ocaml_lin_reg.cmxa  ocaml_lin_reg.cmxs
ocaml_lin_reg/_build/default/lib/.merlin-conf/: lib-ocaml_lin_reg
ocaml_lin_reg/_build/default/lib/.ocaml_lin_reg.objs/byte/: ocaml_lin_reg.cmi  ocaml_lin_reg.cmo  ocaml_lin_reg.cmt
ocaml_lin_reg/_build/default/lib/.ocaml_lin_reg.objs/native/: ocaml_lin_reg.cmx
ocaml_lin_reg/_build/default/test/.merlin-conf/: exe-test_ocaml_lin_reg
ocaml_lin_reg/_build/default/test/.test_ocaml_lin_reg.eobjs/byte/: dune__exe__Test_ocaml_lin_reg.cmi  dune__exe__Test_ocaml_lin_reg.cmti
ocaml_lin_reg/_build/default/test/.test_ocaml_lin_reg.eobjs/native/: dune__exe__Test_ocaml_lin_reg.cmx
ocaml_lin_reg/_build/install/default/lib/ocaml_lin_reg/: META  dune-package  opam
ocaml_lin_reg/lib/: dune
ocaml_lin_reg/test/: dune
